# arm_ordata

./: CMakeLists.txt  package.xml
data/: wiktor_test.env.xml
data/robots/: baxter_pedestal.xacro  dual_arm_iiwa7.urdf.xacro  dual_arm_robot.xacro  dual_arm_torso.xacro  iiwa14-dual.robot.xml  iiwa14.kinbody.xml  iiwa14.robot.xml  iiwa14.srdf  iiwa14.urdf  iiwa7.kinbody.xml  iiwa7.robot.xml  iiwa7.srdf  iiwa7.urdf
launch/: visualize_dual_arm_robot.launch
scripts/: dual_arm_urdf_srdf_test.py  iiwa_native_test.py
