<?xml version="1.0"?>
<package>
  <name>arm_ordata</name>
  <version>0.3.0</version>
  <description>
    The pr_ordata package provides OpenRAVE-specific environments, meshes,
    articulated bodies, robots, and database files used by the Autonomous Robotic
    Manipulation Lab at University of Michigan.
  </description>
  <url type="repository">https://github.com/UM-ARM-Lab/arm_ordata</url>
  <maintainer email="dmcconac@umich.edu">Dale McConachie</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openrave_catkin</build_depend>
</package>
